fix overflowing text on Program and Company list-page cards

--- a/public/less/include/bc-devx.less
+++ b/public/less/include/bc-devx.less
@@ -1564,8 +1564,6 @@ form-title {
   > .card-body {
     height: 100px;
     padding: 15px;
-  }
-  > .card-teaser {
     overflow: hidden;
   }
 }
@@ -1580,8 +1578,6 @@ form-title {
   > .card-body {
     height: 100px;
     padding: 15px;
-  }
-  > .card-teaser {
     overflow: hidden;
   }
 }
